<resources>
    <string name="app_name">Build Cart</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_payable_amount">Payable Amount</string>
    <string name="msg_expected_delive2">Expected Delivery Time -</string>
    <string name="msg_flat_no_build">Flat no / Building Name</string>
    <string name="lbl_product_added">Product Added</string>
    <string name="lbl_referral_code">Referral code</string>
    <string name="lbl_91_71">+91 71********</string>
    <string name="lbl_state">State</string>
    <string name="lbl_signup">Signup</string>
    <string name="msg_product_descrip">Product Description</string>
    <string name="lbl_netbanking">Netbanking</string>
    <string name="lbl_26_may_tue">26 May , Tue  </string>
    <string name="lbl_order_delivered">Order delivered</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_total_products">Total Products</string>
    <string name="lbl_payment_options">Payment Options</string>
    <string name="lbl_confirm_order">Confirm Order</string>
    <string name="lbl_27_may_wed">27 May, Wed</string>
    <string name="msg_privacy_policie">Privacy Policies</string>
    <string name="lbl_order_cancelled">Order Cancelled</string>
    <string name="msg_easy_to_pay_ha">Easy to Pay, Hassle Freeeeee!</string>
    <string name="msg_enter_your_coup">Enter your coupon code</string>
    <string name="lbl_design_tiles">Design Tiles</string>
    <string name="msg_product_benefit">Product Benefits</string>
    <string name="msg_phone_number">Phone Number (+91)</string>
    <string name="lbl_9373636366">9373636366</string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_history">History</string>
    <string name="lbl_dkfjfk567gdkdk">DKFJFK567GDKDK</string>
    <string name="msg_are_you_sure_yo">Are you sure you want to cancel you order.</string>
    <string name="lbl_search_product">Search Product</string>
    <string name="lbl_products2">Products:</string>
    <string name="msg_order_id_23475">Order ID :2347548</string>
    <string name="lbl_get_help">Get Help ?</string>
    <string name="msg_landmark_optio">Landmark (optional)</string>
    <string name="msg_order_id_23472">Order ID : 2347548</string>
    <string name="msg_91_71">+91 71********</string>
    <string name="lbl_rahul">Rahul</string>
    <string name="lbl_help_faq_s2">Help &amp; FAQ\u2019s</string>
    <string name="msg_credit_debit">Credit / Debit card</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_stock_available">Stock Available</string>
    <string name="lbl_32">3.</string>
    <string name="msg_set_default_add">Set Default Address</string>
    <string name="msg_purchase_high_q">Purchase High Quality Products on Build Cart</string>
    <string name="msg_order_id_45377">Order ID #4537738 is confirmed. Check order details.</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_17630">\u20b917630</string>
    <string name="lbl_city">City</string>
    <string name="lbl_view_coupons">View Coupons</string>
    <string name="msg_please_enter_th">Please enter the 6 digit OTP Sent to Mobile Number</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_confirm_address">Confirm Address</string>
    <string name="lbl_ashish_b">Ashish B</string>
    <string name="lbl_copy">Copy</string>
    <string name="lbl_contact_info">Contact Info</string>
    <string name="lbl_22">2.</string>
    <string name="lbl_pay_17630">Pay \u20b90</string>
    <string name="lbl_560068">560068</string>
    <string name="lbl_mail_id">Mail ID -</string>
    <string name="msg_expected_delive">Expected Delivery Date -</string>
    <string name="lbl_categories">Categories</string>
    <string name="msg_delivery_addres">Delivery Address</string>
    <string name="lbl_4_5">(4.5    )   </string>
    <string name="msg_cod_cash_on_d">COD ( Cash on Delivery)</string>
    <string name="msg_order_placed_su">Order Placed Successfully</string>
    <string name="lbl_18299">\u20b918299</string>
    <string name="lbl_saved_address">Saved Address</string>
    <string name="lbl_do_later">Do later</string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="lbl_12">1.</string>
    <string name="lbl_order_now">Order Now  </string>
    <string name="msg_build_your_drea">Build Your Dream places with Ease!</string>
    <string name="lbl_delivery_to">Delivery to:</string>
    <string name="msg_how_to_place_o">How  to place order ?</string>
    <string name="lbl_quantity">Quantity :</string>
    <string name="lbl_skip">Skip &gt;&gt;</string>
    <string name="msg_enter_referral">Enter referral code if you have.</string>
    <string name="lbl_privacy_policy">Privacy policy</string>
    <string name="lbl_560078">560078</string>
    <string name="lbl_product_details">Product details</string>
    <string name="msg_delivery_date">Delivery Date : 26th Feb 2023 </string>
    <string name="lbl_re_order">Re-Order</string>
    <string name="lbl_proceed_to_pay">Proceed to pay</string>
    <string name="lbl_dinesh">Dinesh</string>
    <string name="lbl_products">Products</string>
    <string name="lbl_referrals">Referrals</string>
    <string name="lbl_add_to_cart">Add To Cart</string>
    <string name="lbl_go_to_cart">Go To cart</string>
    <string name="lbl_00">00</string>
    <string name="lbl_check">Check</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_03">03</string>
    <string name="msg_qecuries_gmail">qecuries@gmail.com</string>
    <string name="lbl_qty">Qty</string>
    <string name="lbl_share_via">Share via</string>
    <string name="msg_locality_area">Locality / Area / Street</string>
    <string name="msg_delivery_charge">Delivery Charges</string>
    <string name="lbl_add_profile">Add Profile</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_choose_payment">Choose Payment</string>
    <string name="lbl_price_details">Price Details</string>
    <string name="msg_delivery_within">Delivery Within 6hrs</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_04_35pm">04:35PM</string>
    <string name="lbl_status">Status:</string>
    <string name="lbl_product">Product:</string>
    <string name="lbl_order_details">Order details</string>
    <string name="lbl_through_sms">  through SMS.</string>
    <string name="lbl_place_order">Place Order</string>
    <string name="msg_helpline_number2">Helpline Number -</string>
    <string name="lbl_track_order">Track Order</string>
    <string name="msg_frequently_aske">Frequently Asked Questions</string>
    <string name="msg_cash_on_deliver">Cash on Delivery</string>
    <string name="lbl_order_summary">Order Summary</string>
    <string name="lbl_next">Next</string>
    <string name="msg_enter_referral2">Enter Referral Code</string>
    <string name="lbl_view_details">View Details</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_3_45_pm">3:45 PM</string>
    <string name="msg_already_have_an">Already have an account ?</string>
    <string name="lbl_176302">\u20b917630 </string>
    <string name="lbl_cod">COD ( </string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consect        adipiscing elit. Lorem ipsum dolor sit amet, consect adipiscing elit. Lorem ipsum dolor sit amet, consect adipiscing elit.Lorem ipsum dolor sit amet, consect adipiscing elit.Lorem ipsum dolor sit amet, consect adipiscing elit.Lorem ipsum dolor sit amet, consect adipiscing elit.Lorem ipsum dolor sit amet, consect        adipiscing elit. Lorem ipsum dolor sit amet, consect adipiscing elit. </string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consect        adipiscing elit.</string>
    <string name="msg_login_or_signup">Login Or Signup to use premium access</string>
    <string name="lbl_bengaluru">Bengaluru</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="msg_cancelled_date">Cancelled Date : 26th Feb 2023 </string>
    <string name="lbl_go_back">Go Back</string>
    <string name="msg_enter_mobile_nu">Enter Mobile number</string>
    <string name="lbl_qty_100">Qty: 100</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_8484848493">8484848493</string>
    <string name="lbl_help_faqs">Help &amp; FAQs</string>
    <string name="lbl_7477494990">7477494990</string>
    <string name="lbl_hi_rahul">Hi Rahul</string>
    <string name="lbl_signup_login">Signup/Login</string>
    <string name="msg_sgs_pg_2nd_st">SGS PG , 2nd stage ,
JP Nagar, Bangalore. </string>
    <string name="lbl_for_pincode">For Pincode </string>
    <string name="msg_your_location">Your location - Bengaluru 560068</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="msg_mail_id_qecur">Mail ID - qecuries@gmail.com</string>
    <string name="lbl_view_all">View All</string>
    <string name="lbl_pieces">Pieces</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_upi">UPI</string>
    <string name="lbl_tiles">Tiles</string>
    <string name="lbl_packed">Packed</string>
    <string name="lbl_active">Active </string>
    <string name="lbl_cancelled">Cancelled</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_630">0000</string>
    <string name="lbl_add_more_items">Add More Items</string>
    <string name="msg_transaction_suc">Transaction Successful</string>
    <string name="lbl_type_of_address">Type of Address</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_introduction">Introduction</string>
    <string name="msg_enter_pincode_t">Enter Pincode to check Stock Availibility</string>
    <string name="lbl_dispatched">Dispatched</string>
    <string name="msg_helpline_number">Helpline Number - 091 - 88484789</string>
    <string name="lbl_170002">\u20b917000</string>
    <string name="lbl_go_to_home">Go to home</string>
    <string name="lbl_100">100</string>
    <string name="lbl_rahul_gmail_com">rahul@gmail.com</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_17000">\u20b917000 </string>
    <string name="lbl_about_us">About Us</string>
    <string name="msg_apply_coupon_f">Apply coupon \u201cFIRSTMAAL\u201d to get 60%
offer, T&amp;C applied.</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_enter_code">ENTER CODE</string>
    <string name="lbl_091_88484789">091 - 88484789</string>
    <string name="lbl_delivered">Delivered</string>
    <string name="lbl_cream_colour">Cream Colour</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_office">Office</string>
    <string name="lbl_add_new_address">Add New Address</string>
    <string name="lbl">)</string>
    <string name="lbl_my_cart">My Cart</string>
    <string name="lbl_9487349483">9487349483</string>
    <string name="msg_order_dispatche">Order Dispatched</string>
    <string name="lbl_17_per_piece">\u20b917 per piece</string>
    <string name="msg_didn_t_receive">Didn\u2019t receive OTP?</string>
    <string name="msg_accept_all_term">Accept all terms &amp; conditions</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="msg_verify_mobile_n">Verify Mobile Number</string>
    <string name="editProfile">Edit Profile</string>
</resources>