<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUoTenVM" type="com.buildcart.app.modules.signuoten.data.viewmodel.SignUoTenVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSignUoTen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView
            android:id="@+id/viewEllipseOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_183pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:src="@drawable/build_cart_logo"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_61pxv" android:layout_width="@dimen/_183pxh"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtVerifyMobileN"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_57pxh"
            android:layout_marginStart="@dimen/_57pxh"
            android:layout_marginTop="@dimen/_86pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUoTenVM.signUoTenModel.txtVerifyMobileN}"
            style="@style/txtPoppinsbold20" tools:text="@string/msg_verify_mobile_n"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtPleaseenterth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="@{signUoTenVM.signUoTenModel.txtPleaseenterth}"
            style="@style/txtPoppinsregular16_1" tools:text="@string/msg_please_enter_th"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUoTenVM.signUoTenModel.txtLanguage}"
            style="@style/txtNunitoregular16" tools:text="@string/msg_91_71"/>
        <com.mukesh.OtpView android:focusableInTouchMode="true"
            android:id="@+id/otpViewOtpview" android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_81pxv"
            android:layout_width="wrap_content" app:OtpItemCount="6"
            app:OtpItemSpacing="@dimen/_14pxh"
            app:OtpItemWidth="@dimen/_34pxh"
            app:OtpLineColor="@color/gray_700" app:OtpViewType="line"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowdidntreceive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDidntreceive"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.6" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{signUoTenVM.signUoTenModel.txtDidntreceive}"
                style="@style/txtNunitoregular16" tools:text="@string/msg_didn_t_receive"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtResendOTP"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_weight="0.4" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{signUoTenVM.signUoTenModel.txtResendOTP}"
                style="@style/txtNunitobold16_1" tools:text="@string/lbl_resend_otp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerify"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_85pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_verify"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_verify"/>
    </LinearLayout>
</layout>
