<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUoFifteenVM" type="com.buildcart.app.modules.signuofifteen.data.viewmodel.SignUoFifteenVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignUoFifteen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="?actionBarSize"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_800">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_24pxh"
                   android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="@dimen/_14pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMyProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_gravity="center"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signUoFifteenVM.signUoFifteenModel.txtMyProfile}"
                    style="@style/txtPoppinssemibold24" tools:text="@string/lbl_my_profile"/>

                <TextView
                    android:id="@+id/editProfile"
                    android:layout_width="wrap_content"
                    android:text="@string/editProfile"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    style="@style/txtPoppinssemibold24"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageEllipseProfile"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_169pxh"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_169pxh"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" android:background="@drawable/default_profile_background"/>
        <TextView
            android:background="@drawable/rectangle_border_gray_601_radius_5"
            android:ellipsize="end"
            android:id="@+id/etFullName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_rahul"
            android:textColorHint="@color/gray_800"
            style="@style/etRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView
            android:background="@drawable/rectangle_border_gray_601_radius_5"
            android:ellipsize="end"
            android:id="@+id/etMobileNo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_8484848493"
            android:textColorHint="@color/gray_800"
            style="@style/etRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView
            android:background="@drawable/rectangle_border_gray_601_radius_5"
            android:ellipsize="end"
            android:id="@+id/etEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_email_id"
            android:textColorHint="@color/gray_800"
            style="@style/etRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView
            android:background="@drawable/rectangle_border_gray_601_radius_5"
            android:ellipsize="end"
            android:id="@+id/etCity"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_bengaluru"
            android:textColorHint="@color/gray_800"
            style="@style/etRoundedOutline_2" tools:ignore="Autofill"/>
        <TextView
            android:background="@drawable/rectangle_border_gray_601_radius_5"
            android:ellipsize="end"
            android:id="@+id/etZipcode"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_560078"
            android:textColorHint="@color/gray_800"
            style="@style/etRoundedOutline_2" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogOut"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_log_out"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_log_out"/>
    </LinearLayout>
</layout>
