<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="favRowModel" type="com.buildcart.app.modules.fav.data.model.FavRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnrectangle105"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowrectangle105"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageRectangle105"
                android:layout_height="@dimen/_67pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_83pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
                imageRes="@{@drawable/img_image5}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image5"/>
            <ImageView android:id="@+id/imageVector"
                android:layout_height="@dimen/_19pxh"
                android:layout_marginBottom="@dimen/_49pxv"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/ic_wishlisted"
                tools:ignore="ContentDescription" tools:src="@drawable/ic_wishlisted"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtDesignTiles"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{favRowModel.txtDesignTiles}"
            style="@style/txtPoppinssemibold14" tools:text="@string/lbl_design_tiles"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{favRowModel.txtPrice}"
            style="@style/txtPoppinsregular10" tools:text="@string/lbl_17_per_piece"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowgroupfifty"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="wrap_content"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_1">
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroupFifty"
                android:layout_height="wrap_content"
                android:layout_weight="0.74" android:layout_width="0dp"
                android:paddingBottom="@dimen/_1pxv"
                android:paddingEnd="@dimen/_18pxh"
                android:paddingStart="@dimen/_17pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@{favRowModel.txtGroupFifty}"
                style="@style/txtRoundedOutline" tools:text="@string/lbl_00"/>
            <TextView android:ellipsize="end" android:id="@+id/txtQty"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.26" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{favRowModel.txtQty}"
                style="@style/txtPoppinsregular10_1" tools:text="@string/lbl_qty"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAddToCart"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_9pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_add_to_cart"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_add_to_cart"/>
    </LinearLayout>
</layout>
